argocd/tenants/demo/demo-app/overlays/staging/patch-demo-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
spec:
  template:
    spec:
      containers:
      - name: server
        resources:
          requests:
            cpu: 500m
            memory: "512M"
          limits:
            cpu: 1
            memory: "1G"
