argocd/tenants/demo/demo-app/overlays/staging/patch-demo-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-app-virtualservice
spec:
  gateways:
    - demo-app-prod/demo-app-gateway
  http:
    - match:
        - uri:
            prefix: /prod
      route:
        - destination:
            host: demo-app-svc.demo-app-prod.svc.cluster.local
